discussion/kv_engine/158442/158442_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Add initial ABKVStore implentation

For now it's just acting as a wrapper around a CouchKVStore so that
we can get the bulk of the interface committed. In a future patch
we will add the config required to choose a and b KVStore types,
create the b KVStore, and start adding comparisons of results in
interesting places.

Change-Id: Iea2160fff50a57dc10d188ebf85d9f318fe07740

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-07-30 15:15:43.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-30 15:48:05.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11010/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/ab-kvstore/ab-kvstore.cc:146:27: error: incomplete result type "RollbackResult" in function definition [clang-diagnostic-error]
RollbackResult ABKVStore::rollback(Vbid vbid,
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:27:7: note: forward declaration of "RollbackResult"
class RollbackResult;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/ab-kvstore/ab-kvstore.cc:149:15: error: calling "rollback" with incomplete return type "RollbackResult" [clang-diagnostic-error]
    return a->rollback(vbid, rollbackseqno, std::move(ptr));
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:354:28: note: "rollback" declared here
    virtual RollbackResult rollback(Vbid vbid,
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/kvstore_iface.h:27:7: note: forward declaration of "RollbackResult"
class RollbackResult;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11010/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/ab-kvstore/ab-kvstore.cc:146:27:
error: incomplete result type "RollbackResult" in function definition [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11010/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32605/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/ab-kvstore/ab-kvstore.cc:146:27:
error: incomplete result type "RollbackResult" in function definition
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32605/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20687/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20687/ )

Undefined Sanitizer: home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/objectregistry.cc:119:49: runtime error: member call on address 0x61d000018680 which does not point to an object of type "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20687/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9675/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38238/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/616/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/632/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12786/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11718/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13142/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12603/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
